--- a/real-portfolio/src/App.css
+++ b/real-portfolio/src/App.css
@@ -1,4 +1,6 @@
 
+
+
 .logo{
   font-family: "Exo 2", sans-serif;
   font-optical-sizing: auto;
@@ -8,4 +10,8 @@
 
 body{
   background-color: #778da9
+}
+
+.name{
+  font-size: 100px;
 }
