--- a/real-portfolio/src/Components/Nav.css
+++ b/real-portfolio/src/Components/Nav.css
@@ -1,2 +1,2 @@
-@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Cuprum&family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anta&display=swap');
 
