--- a/real-portfolio/src/App.css
+++ b/real-portfolio/src/App.css
@@ -12,4 +12,20 @@
   margin-top: -60px;
   height: 1075px;
 }
+label{
+  font-size: 2rem;
+}
+input{
+  width: 40%;
+  height: 30px;
+  font-size: 1rem
+}
+textarea{
+  margin-top: 20px;
+  width: 40%;
+  height: 200px;
+  font-size: 1rem
+}
+
+
 
