--- a/real-portfolio/src/App.css
+++ b/real-portfolio/src/App.css
@@ -16,15 +16,23 @@ label{
   font-size: 2rem;
 }
 input{
-  width: 40%;
+  width: 50%;
   height: 30px;
   font-size: 1rem
 }
 textarea{
-  margin-top: 20px;
-  width: 40%;
+  width: 50%;
   height: 200px;
   font-size: 1rem
+}
+.spaceBg2{
+  margin-top: -100px;
+}
+.submitBtn{
+  width: 60%;
+  margin-top: 30px;
+  margin-left: 80px;
+  border-radius: 2px;
 }
 
 
